[project]
name = "komm"
version = "0.20.1"
description = "An open-source library for Python 3 providing tools for analysis and simulation of analog and digital communication systems."
readme = "README.md"
authors = [{ name = "Roberto W. Nobrega", email = "rwnobrega@gmail.com" }]
license = "GPL-3.0-only"
dependencies = [
    "numpy>=2.1.1",
    "tqdm>=4.67.0",
    "typing-extensions>=4.12.0",
]
requires-python = ">=3.10"
urls = { home = "https://komm.dev/", repository = "https://github.com/rwnobrega/komm/" }

[project.optional-dependencies]
lint = [
    "black==25.1.0",
    "isort==6.0.0",
    "pyright==1.1.398",
]
test = [
    "pytest==8.3.3",
    "pytest-doctestplus==1.4.0",
    "pytest-repeat==0.9.3",
    "pytest-benchmark==5.1.0",
    "pytest-cov==6.0.0",
]
doc = [
    "griffe==1.6.0",
    "griffe-inherited-docstrings==1.1.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.4.0",
    "mkdocstrings==0.28.3",
    "mkdocstrings-python==1.16.3",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-include-markdown-plugin==6.0.4",
    "mkdocs-literate-nav==0.6.1",
]
debug = [
    "ipykernel>=6.28.0",
    "matplotlib>=3.8.2",
]
demo = [
    "streamlit==1.39.0",
    "matplotlib==3.9.2",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
unstable = true

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "error"
deprecateTypingAliases = true
strict = ["src/**"]

[tool.pytest.ini_options]
addopts = ["--last-failed", "--doctest-plus"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
pythonpath = ["."]
testpaths = ["src/komm", "tests"]
