[project]
name = "komm"
version = "0.24.0"
description = "An open-source library for Python 3 providing tools for analysis and simulation of analog and digital communication systems."
readme = "README.md"
authors = [{ name = "Roberto W. Nobrega", email = "rwnobrega@gmail.com" }]
license = "GPL-3.0-only"
dependencies = [
    "numpy>=2.1.1",
    "tqdm>=4.67.0",
    "typing-extensions>=4.12.0",
    "typeguard>=4.4.3",
]
requires-python = ">=3.10"
urls = { home = "https://komm.dev/", repository = "https://github.com/rwnobrega/komm/" }

[project.optional-dependencies]
lint = [
    "black==25.1.0",
    "isort==6.0.1",
    "flake8==7.2.0",
    "pyright==1.1.401",
]
test = [
    "pytest==8.3.3",
    "pytest-doctestplus==1.4.0",
    "pytest-repeat==0.9.3",
    "pytest-benchmark==5.1.0",
    "pytest-cov==6.0.0",
]
doc = [
    "griffe==1.7.3",
    "griffe-inherited-docstrings==1.1.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.4.0",
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.12",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-include-markdown-plugin==6.0.4",
    "mkdocs-literate-nav==0.6.1",
]
debug = [
    "ipykernel>=6.28.0",
    "matplotlib>=3.8.2",
]
demo = [
    "streamlit==1.45.0",
    "matplotlib==3.10.1",
]

[build-system]
requires = ["build", "setuptools>=61.0.0", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[tool.black]
unstable = true

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"
deprecateTypingAliases = true
strict = ["src/**"]

[tool.pytest.ini_options]
addopts = ["--doctest-plus"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
pythonpath = ["."]
testpaths = ["src/komm", "tests"]
